prevent horizontal scrolling

--- a/CSP-react/src/App.css
+++ b/CSP-react/src/App.css
@@ -23,6 +23,7 @@ body {
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 h1 {
